# ffmpeg_codec

./: BuildOnRoot.cmake  CMakeLists.txt  FFAudioDecoder.cpp  FFAudioDecoder.h  FFVideoDecoder.cpp  FFVideoDecoder.h  FFmpegAccel.cpp  FFmpegAccel.h  FFmpegCodecPlugin.cpp  FFmpegCodecPlugin.h  FFmpegWrapper.hpp  README.md
adaption/: Logging.h
